part-2a/deployment-sol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia-steve
  labels:
    app: kubia-steve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubia-steve
  template:
    metadata:
      labels:
        app: kubia-steve
    spec:
      containers:
        - name: kubia
          image: stv707/kubia:v1
          ports:
            - containerPort: 8080
