part-2a/service-sol.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-steve
  labels:
    app: kubia-steve
spec:
  selector:
    app: kubia-steve
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
