part-2a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-<username>
  labels:
    app: kubia-<username>
spec:
  selector:
    app: kubia-<username>
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
