part-2a/route-sol.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kubia-steve
  labels:
    app: kubia-steve
spec:
  to:
    kind: Service
    name: kubia-steve
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
