part-2a/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kubia-<username>
  labels:
    app: kubia-<username>
spec:
  to:
    kind: Service
    name: kubia-<username>
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
